frontend/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oleachron-frontend
  labels:
    name: oleachron-frontend
    app: olive-lifecycle-frontend
