frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: olive-lifecycle-frontend-service
  namespace: oleachron-frontend
  labels:
    app: olive-lifecycle-frontend
    app.kubernetes.io/part-of: oleachron
  annotations:
    external-dns.alpha.kubernetes.io/hostname: theolivelot.com
spec:
  type: NodePort
  selector:
    app: olive-lifecycle-frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31848
    protocol: TCP
    name: http
